kustomize/overlays/scots-lab/apps/healthchecks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks
  namespace: healthchecks
spec:
  ports:
    - port: 80
      targetPort: proxy
      protocol: TCP
      name: http
  selector:
    app: healthchecks
