kustomize/overlays/scots-lab/apps/healthchecks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthchecks
  namespace: healthchecks
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Healthchecks
    gethomepage.dev/group: Monitoring
    gethomepage.dev/description: Cron Monitoring
    gethomepage.dev/icon: healthchecks.png
    gethomepage.dev/href: https://ping.srbii.com
    gethomepage.dev/weight: '53'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - ping.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: https
    backendRefs:
    - name: healthchecks
      port: 80
